--- a/index.html
+++ b/index.html
@@ -395,10 +395,10 @@
 	<div class="modal fade" id="mymodal">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<span class="modal-header">
+				<div class="modal-header">
 					{% capture lab1 %}{% include_relative lab1.md %}{% endcapture %}
      				{{ lab1 | markdownify }}
-				</span>
+				</div>
 			</div>
 		</div>
 	</div>
