changed my description

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 									</figure>
 									<span>Adam Wojciechowski</span>
 									<blockquote>
-										<p>Junior, ECE and CS Double Major, Business Minor.</p>
+										<p>Junior, ECE and CS Double Major.</p>
 									</blockquote>
 								</div>
 							</div>
