--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 											<li><a href="#">Milestone 4</a></li>
 										</ul>
 								</li>
-							<li><a href="#fh5co-testimonial">About Us</a></li>
+							<li><a href="#about">About Us</a></li>
 							<li><a href="blog.html">Minutes</a></li>
 							<li><a href="https://github.com/ece3400team11/ece3400team11.github.io">Repository</a></li>
 						</ul>
@@ -303,7 +303,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-testimonial" class="fh5co-bg-section">
+	<div id="about" class="fh5co-bg-section">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
