made stype changes

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
 							<li class="has-dropdown">
-								<a href="#fh5co-project">Labs</a>
+								<a href="#labs-milestones">Labs</a>
 								<ul class="dropdown">
 										<li><a href="#" data-toggle="modal" data-target="#lab1">Lab 1</a></li>
 										<li><a href="#" data-toggle="modal" data-target="#lab2">Lab 2</a></li>
@@ -106,7 +106,7 @@
 									</ul>
 							</li>
 							<li class="has-dropdown">
-									<a href="#fh5co-project">Milestones</a>
+									<a href="#labs-milestones">Milestones</a>
 									<ul class="dropdown">
 											<li><a href="#">Milestone 1</a></li>
 											<li><a href="#">Milestone 2</a></li>
@@ -198,7 +198,7 @@
 		</div>
 	</div>
 	-->
-	<div id="fh5co-project">
+	<div id="labs-milestones">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -209,49 +209,49 @@
 		</div>
 		<div class="container-fluid proj-bottom">
 			<div class="row">
-				<div class="col-md-3 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-6 labs-milestones animate-box" data-animate-effect="fadeIn">
 					<a href="#" data-toggle="modal" data-target="#lab1"><img src="images/project-1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Lab 1</h3>
 						<span>Microcontrollers</span>
 					</a>
 				</div>
-				<div class="col-md-3 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-6 labs-milestones animate-box" data-animate-effect="fadeIn">
 					<a href="#" data-toggle="modal" data-target="#lab2"><img src="images/project-2.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Lab 2</h3>
 						<span>Analog Circuitry and FFT</span>
 					</a>
 				</div>
-				<div class="col-md-3 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-6 labs-milestones animate-box" data-animate-effect="fadeIn">
 					<a href="#" data-toggle="modal" data-target="#lab3"><img src="images/project-3.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Lab 3</h3>
 						<span>Wireless Communication</span>
 					</a>
 				</div>
-				<div class="col-md-3 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-6 labs-milestones animate-box" data-animate-effect="fadeIn">
 					<a href="#" data-toggle="modal" data-target="#lab4"><img src="images/project-9.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Lab 4</h3>
 						<span>FPGA / Vision</span>
 					</a>
 				</div>
-				<div class="col-md-3 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-6 labs-milestones animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-1.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Milestone 1</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-3 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-6 labs-milestones animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-2.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Milestone 2</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-3 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-6 labs-milestones animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-3.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Milestone 3</h3>
 						<span>View Course</span>
 					</a>
 				</div>
-				<div class="col-md-3 col-sm-6 fh5co-project animate-box" data-animate-effect="fadeIn">
+				<div class="col-md-3 col-sm-6 labs-milestones animate-box" data-animate-effect="fadeIn">
 					<a href="#"><img src="images/project-9.jpg" alt="Free HTML5 Website Template by FreeHTML5.co" class="img-responsive">
 						<h3>Milestone 4</h3>
 						<span>View Course</span>
