updated labs and milestones description

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Labs and Milestones</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<p>Click any of the following links to see what we were up to in each of our 4 labs and 4 milestones.</p>
 				</div>
 			</div>
 		</div>
