added contract section

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 								</li>
 							<li><a href="#about">About Us</a></li>
 							<li><a href="blog.html">Minutes</a></li>
+							<li><a href="#contract">Contract</a></li>
 							<li><a href="https://github.com/ece3400team11/ece3400team11.github.io">Repository</a></li>
 						</ul>
 					</div>
@@ -385,6 +386,23 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
+
+
+
+	<!--CONTRACT-->
+	<div class="modal fade" id="contract">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1>Team Contract</h1>
+				</div>
+				<div class="modal_body">
+					<p>implement me</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<!--LAB 1-->
 	<div class="modal fade" id="lab1">
