--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 								</li>
 							<li><a href="#about">About Us</a></li>
 							<li><a href="blog.html">Minutes</a></li>
-							<li><a href="#contract">Contract</a></li>
+							<li><a href="#" data-toggle="modal" data-target="#contract">Contract</a></li>
 							<li><a href="https://github.com/ece3400team11/ece3400team11.github.io">Repository</a></li>
 						</ul>
 					</div>
