--- a/index.html
+++ b/index.html
@@ -441,13 +441,14 @@ void loop() {
 	delay(1000);                       
 }
 					</code></pre>
+					<iframe width="540" height="304" src="https://www.youtube.com/embed/FUZXOQbeATo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					<h2>Task 2 - Blinking an External LED:</h2>
 					<p>
 						Our next task was to modify the code for task one to blink an external LED. We did this by 
 						connecting an external LED to a digital pin through a resistor as shown in the diagram below:
 					</p>
 					<figure>
-						<img src="images/person_3.jpg" alt="user">
+						<img src="images/lab1task2.png" style="width:100%;">
 					</figure>
 					<p>
 						All we did in the code for this task was to change our Pin Number from the on-chip LED to 
@@ -460,6 +461,7 @@ void loop() {
 						The resistor was used to prevent sourcing too much current through the pin in case of a short 
 						circuit, which would burn out both the Arduino and the external LED.
 					</p>
+					<iframe width="540" height="304" src="https://www.youtube.com/embed/RYbxh-uWJU4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					<h2>Task 3 - Reading an Analog Input:</h2>
 					<p>
 						Our third task was to detect changes in the resistance value of a potentiometer through an analog 
@@ -467,7 +469,7 @@ void loop() {
 						divider circuit as shown below and connection the output of the circuit to an analog pin:
 					</p>
 					<figure>
-						<img src="images/person_3.jpg" alt="user">
+						<img src="images/lab1task3.png" style="width:100%;">
 					</figure>
 					<p>
 						We then used the following code to set A0 as our analog pin and setup the serial monitor:
@@ -496,7 +498,7 @@ void loop() {
 						use the analog signal input from the potentiometer to control the brightness of the external LED:
 					</p>
 					<figure>
-						<img src="images/person_3.jpg" alt="user">
+						<img src="images/lab1task4.png" style="width:100%;">
 					</figure>
 					<p>
 						The LED could only be connected to one of the 6 digital pins which could output a PWN signal, 
@@ -515,6 +517,7 @@ void loop() {
 						the LED is only able to input voltage values from 0 to 255, so we used the map function to make sure 
 						that we didnt exceed the voltage limits of the LED.
 					</p>
+					<iframe width="540" height="304" src="https://www.youtube.com/embed/4hCbVb7QNAI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					<h2>Task 5 - Controlling Parallax Servos:</h2>
 					<p>
 						Our final task before assembling our robot was to use the PWM signal we generated in the previous task 
@@ -538,6 +541,7 @@ void setup() {
 						to control the speed and direction of the servo, with the only difference being that the range of voltage 
 						values for the servo was from 0 to 180 instead of 0 to 255.
 					</p>
+					<iframe width="540" height="304" src="https://www.youtube.com/embed/89UeEeVpefA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					<h2>Task 6 - Assembling the Robot:</h2>
 					<p>
 						The parts we used to assemble our robot were:
@@ -634,6 +638,9 @@ void loop() {
 						we decided to try a third servo. The third servo was much closer to the speed we were expecting, so we switched out the 
 						super fast servo. After this switch, we were able to get out robot to drive in straight lines and in a proper figure eight pattern.
 					</p>
+					<iframe width="540" height="304" src="https://www.youtube.com/embed/GhzqjIfTxn0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<h2>Blooper</h2>
+					<iframe width="540" height="304" src="https://www.youtube.com/embed/d9uHi5ukqcA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
